<resources>
    <string name="app_name">Brifieng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_helper_text">Введите логин</string>
    <string name="password_helper_text">Введите пароль</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="register_save">Зарегистрироваться</string>
    <string name="next">Далее</string>
    <string name="exit_register">Вернуться ко входу</string>
    <string name="exit_input">Вернуться</string>
    <string name="send_task">Отправить задачу</string>
    <string name="login_save">Войти</string>
    <string name="email_helper_text">Введите email</string>
    <string name="name_helper_text">Введите имя</string>
    <string name="surname_helper_text">Введите Фамилию</string>
    <string name="group_helper_text">Введите группу</string>
    <string name="email_hint">Почта</string>
    <string name="title_input_hint">Заголовок</string>
    <string name="body_input_hint">Вопрос</string>
    <string name="time_input_hint">Время выполнения</string>
    <string name="date_input_hint">Срок сдачи</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="group_hint">Группа, если вы студент</string>
    <string name="to_group_hint">Задача для групп:</string>
    <string name="answ_correct_input_hint">Верный ответ</string>
    <string name="university">Университет</string>
    <string name="send_answer">Отправить ответ</string>
    <string name="send_answer_repeat">Отправить ответ еще раз</string>
    <string name="check_box">Поставьте галочку если вы преподаватель</string>
    <string name="home_url">http://172.20.224.1:8082/</string>
    <string name="test_url">http://172.20.224.1:8082/</string>
    <string name="menu_home">Обучение</string>
    <string name="menu_history">История</string>
    <string name="menu_prof">Мой профиль</string>
    <string name="menu_statistic">Успеваемость</string>
    <string name="menu_teach_home">Выдача задач</string>
    <string name="menu_teach_prof">Профиль</string>
</resources>