<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_hint_text"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="Генерируемый логин:"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/login_input_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/login_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="100"
                    android:background="@drawable/login_text_rounded"
                    android:gravity="center"
                    android:text="Случайный логин"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/generate_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_text_rounded"
                    android:padding="16dp"
                    android:src="@drawable/generate" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/password_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_input_layout"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="25"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/check_box"
                app:layout_constraintVertical_bias="0.08"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/email_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="30"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/name_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input_edit_text"
                    android:layout_width="match_parent"
                    android:background="@drawable/login_text_rounded"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="50"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/surname_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:maxLength="50"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/univ_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/university"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
                app:startIconDrawable="@drawable/university">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/univ_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_text_rounded"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/group_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_input_layout"
                app:startIconDrawable="@drawable/group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_input_edit_text"
                    android:layout_width="match_parent"
                    android:background="@drawable/login_text_rounded"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="25"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:elevation="4dp"
                android:text="@string/register_save"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/bottom_save"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_input_layout"
                app:layout_constraintVertical_bias="0.1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:elevation="16dp"
                android:text="@string/exit_register"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/bottom_save"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register"
                />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
