<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/group_text_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/for_group_text"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/login_text_rounded"
                    android:gravity="center"
                    android:text="Задача для групп: 423, 424, 425"
                    android:textSize="16sp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/title_input_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/create">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textAutoCorrect"
                    android:maxLength="25"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/question_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/body_input_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/question">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="10" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/answer_correct_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:hint="@string/answ_correct_input_hint"
                android:padding="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/correct_check">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/answer_correct_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_text_rounded"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="10" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/time_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="Выберите время выполнения задачи"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/minutesEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_text_rounded"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="time"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:text="00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:text=":"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/secondsEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_text_rounded"
                        android:digits="0123456789"
                        android:gravity="center"
                        android:inputType="time"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:text="00" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_text_rounded_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/daysTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="Выберите срок выполнения задачи"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <DatePicker
                        android:id="@+id/input_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_text_rounded"
                        android:gravity="center"
                        android:padding="8dp">
                    </DatePicker>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_task"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:elevation="4dp"
                android:text="@string/send_task"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/bottom_save"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_input_layout"
                app:layout_constraintVertical_bias="0.1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:elevation="16dp"
                android:text="@string/exit_input"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/bottom_save"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>